unpackaged/main/default/objects/Case/fields/NU_ADV_Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRM</fullName>
            </value>
            <value>
                <fullName>Primary Relationship Manager</fullName>
            </value>
            <value>
                <fullName>Secondary Relationship Manager</fullName>
            </value>
            <value>
                <fullName>Leadership Giving Manager</fullName>
            </value>
            <value>
                <fullName>Planned Giving Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>