unpackaged/main/default/objects/Case/fields/NU_ADV_Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>NU_ADV_Disqualification_Reason__c</fullName>
    <label>Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not the right time</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Lack of Closeness</fullName>
            </value>
            <value>
                <fullName>Financially Unable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>