unpackaged/main/default/objects/Case/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Activity</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Affiliation</fullName>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>Awards/Honors</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Constituent</fullName>
            </value>
            <value>
                <fullName>Constituent Name</fullName>
            </value>
            <value>
                <fullName>Contact Report</fullName>
            </value>
            <value>
                <fullName>Degree/Major</fullName>
            </value>
            <value>
                <fullName>Designation</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Giving Society</fullName>
            </value>
            <value>
                <fullName>Homepage</fullName>
            </value>
            <value>
                <fullName>Involvement</fullName>
            </value>
            <value>
                <fullName>iWave</fullName>
            </value>
            <value>
                <fullName>Knowtify</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Maps</fullName>
            </value>
            <value>
                <fullName>Name</fullName>
            </value>
            <value>
                <fullName>Naming Opportunities</fullName>
            </value>
            <value>
                <fullName>Nomination</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Rating</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Salutation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>