unpackaged/main/default/objects/Case/recordTypes/Adjustments.recordType-meta.xml
<RecordType>
    <fullName>Adjustments</fullName>
    <active>true</active>
    <businessProcess>Pledge and Gift</businessProcess>
    <description>Used when an adjustment is needed to a booked gift or pledge.</description>
    <label>Adjustments</label>
</RecordType>