unpackaged/main/default/objects/Case/recordTypes/Assignments.recordType-meta.xml
<RecordType>
    <fullName>Assignments</fullName>
    <active>true</active>
    <businessProcess>Assignments</businessProcess>
    <description>Assignment/Reassignment/Unassignment Requests</description>
    <label>Assignments</label>
</RecordType>