unpackaged/main/default/objects/Case/recordTypes/Data_Upload.recordType-meta.xml
<RecordType>
    <fullName>Data_Upload</fullName>
    <active>true</active>
    <businessProcess>Data Upload</businessProcess>
    <description>Used to submit requests to have spreadsheets of data uploaded into ascend.</description>
    <label>Data Upload</label>
</RecordType>