unpackaged/main/default/objects/Case/recordTypes/Fund_Request.recordType-meta.xml
<RecordType>
    <fullName>Fund_Request</fullName>
    <active>false</active>
    <businessProcess>Fund Request</businessProcess>
    <description>Used to request a new fund created in ascend.</description>
    <label>Fund Management Request</label>
</RecordType>