unpackaged/main/default/objects/Case/recordTypes/Licensing.recordType-meta.xml
<RecordType>
    <fullName>Licensing</fullName>
    <active>true</active>
    <businessProcess>UAT Access</businessProcess>
    <description>Used to request new access, change existing access, or terminate access.</description>
    <label>Licensing</label>
</RecordType>