unpackaged/main/default/objects/Case/recordTypes/Marketing_Cloud_Requests.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Cloud_Requests</fullName>
    <active>true</active>
    <businessProcess>Marketing Cloud Requests</businessProcess>
    <description>Used to request support with issues relating to data extensions, sender profiles, email content build issues, and Marketing Cloud analytics.</description>
    <label>Marketing Cloud Requests</label>
</RecordType>