unpackaged/main/default/objects/Case/recordTypes/New_Contact_or_Org.recordType-meta.xml
<RecordType>
    <fullName>New_Contact_or_Org</fullName>
    <active>true</active>
    <businessProcess>New Contact or Org Request</businessProcess>
    <description>Used to request a new contact or organization record to be created.</description>
    <label>New Contact or Org</label>
</RecordType>