unpackaged/main/default/objects/Case/recordTypes/New_Functionality.recordType-meta.xml
<RecordType>
    <fullName>New_Functionality</fullName>
    <active>true</active>
    <businessProcess>New Functionality</businessProcess>
    <description>Used to request functionality that currently does not exist</description>
    <label>New Functionality</label>
</RecordType>