unpackaged/main/default/objects/Case/recordTypes/New_Pledge.recordType-meta.xml
<RecordType>
    <fullName>New_Pledge</fullName>
    <active>true</active>
    <businessProcess>Pledge and Gift</businessProcess>
    <description>Used when booking a new pledge, gift or pledge payment</description>
    <label>New Pledge Or Gift</label>
</RecordType>