unpackaged/main/default/objects/Case/recordTypes/NU_ADV_Bio_Demo_Request.recordType-meta.xml
<RecordType>
    <fullName>NU_ADV_Bio_Demo_Request</fullName>
    <active>true</active>
    <businessProcess>Points of Contact</businessProcess>
    <description>Updates to contact information for constituents and organizations</description>
    <label>Bio Demo Request</label>
</RecordType>