unpackaged/main/default/objects/Case/recordTypes/NU_ADV_Donor_Relations.recordType-meta.xml
<RecordType>
    <fullName>NU_ADV_Donor_Relations</fullName>
    <active>true</active>
    <businessProcess>Donor Relations</businessProcess>
    <description>﻿Request pricing for named spaces, stewardship plans, special gifts, donor/student meetings, fund reporting changes, and ad hoc reports.</description>
    <label>Donor Relations</label>
</RecordType>