unpackaged/main/default/objects/Case/recordTypes/NU_ADV_Internal_Fund_Report.recordType-meta.xml
<RecordType>
    <fullName>NU_ADV_Internal_Fund_Report</fullName>
    <active>true</active>
    <businessProcess>Internal Fund Report</businessProcess>
    <description>For Donor Relations Internal Use</description>
    <label>DR Internal Fund Report</label>
</RecordType>