unpackaged/main/default/objects/Case/recordTypes/NU_ADV_Report_Request.recordType-meta.xml
<RecordType>
    <fullName>NU_ADV_Report_Request</fullName>
    <active>true</active>
    <businessProcess>Report Request</businessProcess>
    <description>Used to request a new report/dashboard or modification to an existing report/dashboard. Also used to request a list of constituents to be invited to an event.</description>
    <label>Report Request</label>
</RecordType>