unpackaged/main/default/objects/Case/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <businessProcess>Other</businessProcess>
    <description>Used to request guidance on functionality, all other requests that don’t fit into other case types</description>
    <label>Other</label>
</RecordType>