unpackaged/main/default/objects/Case/recordTypes/Regression_Testing.recordType-meta.xml
<RecordType>
    <fullName>Regression_Testing</fullName>
    <active>true</active>
    <businessProcess>Regression Testing</businessProcess>
    <description>Used to log activities associated with regression testing.</description>
    <label>Regression Testing</label>
</RecordType>