unpackaged/main/default/objects/Case/recordTypes/Reseach_Request.recordType-meta.xml
<RecordType>
    <fullName>Reseach_Request</fullName>
    <active>true</active>
    <businessProcess>Research Request</businessProcess>
    <description>Request for prospect research</description>
    <label>Prospect Development Request</label>
</RecordType>