unpackaged/main/default/objects/Case/recordTypes/Technology_Change.recordType-meta.xml
<RecordType>
    <fullName>Technology_Change</fullName>
    <active>true</active>
    <businessProcess>Technology Change</businessProcess>
    <description>Used to request a change to existing technology.</description>
    <label>Technology Change</label>
</RecordType>