unpackaged/main/default/objects/Case/recordTypes/User_Interface.recordType-meta.xml
<RecordType>
    <fullName>User_Interface</fullName>
    <active>true</active>
    <businessProcess>Assignments</businessProcess>
    <description>Used to request layout changes in ascend.</description>
    <label>User Interface</label>
</RecordType>