unpackaged/main/default/objects/Case/validationRules/Name_Information_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Information_Required</fullName>
    <active>true</active>
    <description>Must fill in name field(s) when name change indicated</description>
    <errorConditionFormula>AND (
				NU_ADV_Name_Change__c,
				OR(
				ISBLANK(NU_ADV_First_Name__c), 
ISBLANK(NU_ADV_Last_Name__c))
)</errorConditionFormula>
    <errorDisplayField>NU_ADV_Last_Name__c</errorDisplayField>
    <errorMessage>You must fill in a name field if you are requesting a name change.</errorMessage>
</ValidationRule>