unpackaged/main/default/objects/Case/listViews/Bio_Demo_Requests_Case.listView-meta.xml
<ListView>
    <fullName>Bio_Demo_Requests_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Bio Demo Requests</label>
    <queue>Bio_Demo_Requests</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>