unpackaged/main/default/objects/Case/listViews/Licensing_Case.listView-meta.xml
<ListView>
    <fullName>Licensing_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Licensing</label>
    <queue>Licensing</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>