unpackaged/main/default/objects/Case/listViews/Marketing_Cloud_Case.listView-meta.xml
<ListView>
    <fullName>Marketing_Cloud_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Marketing Cloud</label>
    <queue>Marketing_Cloud</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>